# cargo-features = ["edition2024"] # DOCS: https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#edition-2024

# Documentation : https://rust-cli.github.io/book/tutorial/packaging.html
[package]
name = "thirdeye"
version = "0.1.0"
authors = ["Eshan Roy <eshanized@proton.me>"]
license = "MIT"
edition = "2021"
description = "An under development search engine written in rust."
homepage = "https://github.com/TonmoyInfrastructure/ThirdEye"
repository = "https://github.com/TonmoyInfrastructure/ThirdEye"
categories = ["search-engine"]

[dependencies]
actix-web = "4.5.1"
handlers = "0.10.0"
models-parser = "=0.1.0"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
